--- a/foodie-dev-api/src/main/resources/application.yml
+++ b/foodie-dev-api/src/main/resources/application.yml
@@ -4,7 +4,7 @@
 #
 ############################################################
 server:
-  #  port: 8088
+  port: 8089
   tomcat:
     uri-encoding: UTF-8
   max-http-header-size: 80KB
@@ -20,7 +20,7 @@ spring:
   datasource:                                           # 数据源的相关配置
     type: com.zaxxer.hikari.HikariDataSource          # 数据源类型：HikariCP
     driver-class-name: com.mysql.jdbc.Driver          # mysql驱动
-    url: jdbc:mysql://localhost:3306/foodie-shop?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
+    url: jdbc:mysql://localhost:3306/foodie-shop-dev?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
     username: root
     password: root
     hikari:
